@@ -1,5 +1,10 @@
 2007-09-19  Matthew Grooms <mgrooms@shrew.net>
 	From Gabriel Somlo <somlo@cmu.edu>
+	* src/racoon/isakmp.c: Set REUSE option on sockets to prevent failures
+	associated with closing and immediately re-opening.
+
+2007-09-19  Matthew Grooms <mgrooms@shrew.net>
+	From Gabriel Somlo <somlo@cmu.edu>
 	* src/racoon/isakmp_unity.c: Prevent duplicate entries in splitnet list.
 
 2007-09-12  Matthew Grooms <mgrooms@shrew.net>
